tests/sema/fail/v5_fail_extend_struct.ep
# COMPILE_FAIL: extend only supports u8[]
struct Box {
    value: i64
}

fun main(): void {
    let a = new Box[1]
    let b = new Box[1]
    a.extend(b)
}
